--- a/weather-to-wear-client/package.json
+++ b/weather-to-wear-client/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^5.0.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-cookie": "^2.2.0",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
